--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>teste de cores</h1>
-    
+    <h1>teste fontes</h1>
 </body>
 </html>
