Add header logo and navigation menu structure

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jornada Viagens</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>teste fontes</h1>
-</body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <a href="#">
+        <img
+          src="img/Logo-provisória-branca 1.png"
+          alt="Logo Jornada Viagens na cor branca"
+        />
+      </a>
+      <img src="img/menu.png" alt="Menu hamburguer"/>
+      <nav>
+        <a href="Blog"></a>
+        <a href="Pacotes de viagem"></a>
+        <a href="Contato"></a>
+        <a href="Fale Conosco"></a>
+      </nav>
+    </header>
+  </body>
 </html>
