--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
   </head>
   <body>
     <header>
-      <a href="#">
+      <a href="index.html" title="Página inicial">  
         <img
           src="img/Logo-provisória-branca 1.png"
           alt="Logo Jornada Viagens na cor branca"
         />
       </a>
-      <img src="img/menu.png" alt="Menu hamburguer"/>
+      <img src="img/menu.png" alt="Menu hamburguer" />
       <nav>
-        <a href="Blog"></a>
-        <a href="Pacotes de viagem"></a>
-        <a href="Contato"></a>
-        <a href="Fale Conosco"></a>
+        <ul>
+          <li><a href="blog.html" target="_blank" title="Página de blog">Blog</a></li>
+          <li><a href="pacotes.thml" target="_blank" title="Página de pacotes de viagem">Pacotes de viagem</a></li>
+          <li><a href="contato.html" target="_blank" title="Página de contato">Contato</a></li>
+        </ul>
       </nav>
     </header>
   </body>
