adds functionality to show and hide the menu

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
         />
       </a>
       <div class="header__menu-nav">
-        <a href="#" title="Menu hamburguer" class="header__menu-link">
+        <label for="header__menu-nav">
           <img class="header__menu" src="img/menu.png" alt="Menu hamburguer" />
-        </a>
+          <a href="#" title="Menu hamburguer" class="header__menu-link"> </a>
+        </label>
+        <input type="checkbox" id="header__menu-nav" hidden/>
         <nav>
           <ul>
             <li>
-              <a href="blog.html" target="_blank" title="Página de blog">Blog</a>
+              <a href="blog.html" target="_blank" title="Página de blog"
+                >Blog</a
+              >
             </li>
             <li>
               <a
