adds style to the open menu

--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
         </label>
         <input type="checkbox" id="header__menu-nav" hidden/>
         <nav>
-          <ul>
+          <ul class="list_link">
             <li>
               <a href="blog.html" target="_blank" title="Página de blog"
-                >Blog</a
-              >
+                >Blog</a>
             </li>
             <li>
               <a
@@ -45,5 +44,11 @@
         </nav>
       </div>
     </header>
+    <section>
+
+      <li>
+        <a href="#">sou linda</a>
+      </li>
+    </section>
   </body>
 </html>
