--- a/index.html
+++ b/index.html
@@ -3,40 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Jornada Viagens,uma agência apaixonada por criar viagens inesquecíveis"
+    />
+
+    <meta name="og:title" content="Jornada Viagens" />
+    <meta
+      name="og:description"
+      content="Jornada Viagens,uma agência apaixonada por criar viagens inesquecíveis"
+    />
+    <meta
+      name="og:image"
+      content=""
+    />
+    <meta name="og:type" content="website" />
+    <meta
+      name="og:url"
+      content=""
+    />
+
+    <link rel="icon" href="favico.svg" type="xml/svg" />
+    <link rel="stylesheet" href="./css/style.css" />
+
     <title>Jornada Viagens</title>
-    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <a href="index.html" title="Página inicial" class="header__logo-link">
+    <header class="main-header">
+      <a class="logo" href="index.html" title="voltar para a página inicial">
         <img
-          class="header__logo"
+          class="img-mobile"
+          src="img/Logo-provisória-branca 1.png"
+          alt="Bussola do logo Jornada Viagens na cor branca"
+        />
+        <img
+          class="img-desktop"
           src="img/Logo-provisória-branca 1.png"
           alt="Logo Jornada Viagens na cor branca"
         />
       </a>
-      <div class="header__menu-nav">
-        <label for="header__menu-nav">
-          <img class="header__menu" src="img/menu.png" alt="Menu hamburguer" />
-          <a href="#" title="Menu hamburguer" class="header__menu-link"> </a>
+      <div class="navigation-menu">
+        <label for="menu">
+          <img src="img/menu.png" alt="menu" />
         </label>
-        <input type="checkbox" id="header__menu-nav" hidden/>
+        <input type="checkbox" id="menu" hidden />
         <nav>
-          <ul class="list_link">
+          <ul class="list-links">
             <li>
-              <a href="blog.html" target="_blank" title="Página de blog"
-                >Blog</a>
+              <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
             </li>
             <li>
               <a
-                href="pacotes.html"
+                href="pacotes-de-viagens.html"
                 target="_blank"
-                title="Página de pacotes de viagem"
+                title="Acessar Pacotes de viagem"
                 >Pacotes de viagem</a
               >
             </li>
             <li>
-              <a href="contato.html" target="_blank" title="Página de contato"
+              <a href="contato.html" target="_blank" title="Acessar Contato"
                 >Contato</a
               >
             </li>
@@ -44,11 +69,3 @@
         </nav>
       </div>
     </header>
-    <section>
-
-      <li>
-        <a href="#">sou linda</a>
-      </li>
-    </section>
-  </body>
-</html>
