finalizes header styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         />
         <img
           class="img-desktop"
-          src="img/Logo-provisória-branca 1.png"
+          src="img/Logo-branco 2.png"
           alt="Logo Jornada Viagens na cor branca"
         />
       </a>
