--- a/index.html
+++ b/index.html
@@ -74,7 +74,20 @@
     <section class="offers">
       <div class="section-title">
         <h2>Ofertas da Semana</h2>
-        <hr>
+        <hr />
+      </div>
+      <div class="offers-cards">
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>Japão</h3>
+            <span>R$ 4000</span>
+          </header>
+          <section></section>
+          <footer>
+            <a href="detalhes.html" class="buttom">Ver Detalhes</a>
+          </footer>
+        </article>
       </div>
     </section>
   </body>
