finalize button styles

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </header>
           <section></section>
           <footer>
-            <a href="detalhes.html" class="buttom">Ver Detalhes</a>
+            <a href="#" class="button">Ver Detalhes</a>
           </footer>
         </article>
       </div>
