--- a/index.html
+++ b/index.html
@@ -88,6 +88,39 @@
             <a href="#" class="button">Ver Detalhes</a>
           </footer>
         </article>
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>San Andreas</h3>
+            <span>R$ 3000</span>
+          </header>
+          <section></section>
+          <footer>
+            <a href="#" class="button">Ver Detalhes</a>
+          </footer>
+        </article>
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>Paraíba</h3>
+            <span>R$ 1200</span>
+          </header>
+          <section></section>
+          <footer>
+            <a href="#" class="button">Ver Detalhes</a>
+          </footer>
+        </article>
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>Manaus</h3>
+            <span>R$ 1600</span>
+          </header>
+          <section></section>
+          <footer>
+            <a href="#" class="button">Ver Detalhes</a>
+          </footer>
+        </article>
       </div>
     </section>
   </body>
