--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <hr />
       </div>
       <div class="offers-cards">
-        <article class="card">
+        <article class="card japao">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>Japão</h3>
@@ -88,7 +88,7 @@
             <a href="#" class="button">Ver Detalhes</a>
           </footer>
         </article>
-        <article class="card">
+        <article class="card san-andreas">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>San Andreas</h3>
@@ -99,7 +99,7 @@
             <a href="#" class="button">Ver Detalhes</a>
           </footer>
         </article>
-        <article class="card">
+        <article class="card paraiba">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>Paraíba</h3>
@@ -110,7 +110,7 @@
             <a href="#" class="button">Ver Detalhes</a>
           </footer>
         </article>
-        <article class="card">
+        <article class="card manaus">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>Manaus</h3>
