--- a/index.html
+++ b/index.html
@@ -123,5 +123,51 @@
         </article>
       </div>
     </section>
+    <section class="categories">
+      <div class="section-title">
+        <h2>Busque por Categoria</h2>
+        <hr/>
+      </div>
+      <div class="categories-cards">
+        <article class="card pacote-nacional">
+          <img src="/img/icone - pacotes nacionais.png" alt="icone pacotes nacionais">
+          <header>
+            <h4>Pacotes Nacionais</h4>
+          </header>
+          <section></section>
+          <footer>
+          </footer>
+        </article>
+        <article class="card pacote-internacional">
+          <img src="/img/icone - pacotes interacionais.png" alt="icone pacotes internacional">
+          <header>
+            <h4>Pacotes Internacional</h4>
+          </header>
+          <section></section>
+          <footer>
+          </footer>
+        </article>
+        <article class="card transfer">
+          <img src="/img/icone -transfer.png" alt="icone cards Transfer">
+          <header>
+            <h4>Transfer</h4>
+          </header>
+          <section></section>
+          <footer>
+          </footer>
+        </article>
+        <article class="card seguro-viagem">
+          <img src="/img/icone - seguro viagem.png" alt="icone cards Seguro Viagem">
+          <header>
+            <h4>Seguro Viagem</h4>
+          </header>
+          <section></section>
+          <footer>
+          </footer>
+        </article>
+      </div>
+    </section>
+    </section>
   </body>
 </html>
+  
