--- a/index.html
+++ b/index.html
@@ -129,42 +129,61 @@
         <hr/>
       </div>
       <div class="categories-cards">
-        <article class="card pacote-nacional">
-          <img src="/img/icone - pacotes nacionais.png" alt="icone pacotes nacionais">
-          <header>
-            <h4>Pacotes Nacionais</h4>
-          </header>
-          <section></section>
-          <footer>
-          </footer>
-        </article>
-        <article class="card pacote-internacional">
-          <img src="/img/icone - pacotes interacionais.png" alt="icone pacotes internacional">
-          <header>
-            <h4>Pacotes Internacional</h4>
-          </header>
-          <section></section>
-          <footer>
-          </footer>
-        </article>
-        <article class="card transfer">
-          <img src="/img/icone -transfer.png" alt="icone cards Transfer">
-          <header>
-            <h4>Transfer</h4>
-          </header>
-          <section></section>
-          <footer>
-          </footer>
-        </article>
-        <article class="card seguro-viagem">
-          <img src="/img/icone - seguro viagem.png" alt="icone cards Seguro Viagem">
-          <header>
-            <h4>Seguro Viagem</h4>
-          </header>
-          <section></section>
-          <footer>
-          </footer>
-        </article>
+        <a
+          class="card"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Pacotes Nacionais"
+        >
+          <img
+            src="img/icone-caminhada.png"
+            alt="ícone cinza representando uma pessoa fazendo tracking"
+          />
+          <h3 class="content-title">
+            Pacotes<br />
+            Nacionais
+          </h3>
+        </a>
+
+        <a
+          class="card"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Pacotes Internacionais"
+        >
+          <img
+            src="img/icone-aviao.png"
+            alt="ícone cinza representando um avião"
+          />
+          <h3 class="content-title">
+            Pacotes <br />
+            Internacionais
+          </h3>
+        </a>
+        <a
+          class="card single-line transfer"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Transfer"
+        >
+          <img
+            src="img/icone-onibus.png"
+            alt="ícone cinza representando um ônibus"
+          />
+          <h3 class="content-title">Transfer</h3>
+        </a>
+        <a
+          class="card single-line"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Seguro Viagem"
+        >
+          <img
+            src="img/icone-planeta.png"
+            alt="ícone cinza representando o planeta terra com um cadeado"
+          />
+          <h3 class="content-title">Seguro Viagem</h3>
+        </a>
       </div>
     </section>
     </section>
