--- a/index.html
+++ b/index.html
@@ -1,192 +1,171 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Jornada Viagens,uma agência apaixonada por criar viagens inesquecíveis"
-    />
 
-    <meta name="og:title" content="Jornada Viagens" />
-    <meta
-      name="og:description"
-      content="Jornada Viagens,uma agência apaixonada por criar viagens inesquecíveis"
-    />
-    <meta name="og:image" content="" />
-    <meta name="og:type" content="website" />
-    <meta name="og:url" content="" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Jornada Viagens,uma agência apaixonada por criar viagens inesquecíveis" />
 
-    <link rel="icon" href="favico.svg" type="xml/svg" />
-    <link rel="stylesheet" href="./css/style.css" />
+  <meta name="og:title" content="Jornada Viagens" />
+  <meta name="og:description" content="Jornada Viagens,uma agência apaixonada por criar viagens inesquecíveis" />
+  <meta name="og:image" content="" />
+  <meta name="og:type" content="website" />
+  <meta name="og:url" content="" />
 
-    <title>Jornada Viagens</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <a class="logo" href="index.html" title="voltar para a página inicial">
-        <img
-          class="img-mobile"
-          src="img/Logo-provisória-branca 1.png"
-          alt="Bussola do logo Jornada Viagens na cor branca"
-        />
-        <img
-          class="img-desktop"
-          src="img/Logo-branco 2.png"
-          alt="Logo Jornada Viagens na cor branca"
-        />
+  <link rel="icon" href="favico.svg" type="xml/svg" />
+  <link rel="stylesheet" href="./css/style.css" />
+
+  <title>Jornada Viagens</title>
+</head>
+
+<body>
+  <header class="main-header">
+    <a class="logo" href="index.html" title="voltar para a página inicial">
+      <img class="img-mobile" src="img/Logo-provisória-branca 1.png"
+        alt="Bussola do logo Jornada Viagens na cor branca" />
+      <img class="img-desktop" src="img/Logo-branco 2.png" alt="Logo Jornada Viagens na cor branca" />
+    </a>
+    <div class="navigation-menu">
+      <label for="menu">
+        <img src="img/menu.png" alt="menu" />
+      </label>
+      <input type="checkbox" id="menu" hidden />
+      <nav>
+        <ul class="list-links">
+          <li>
+            <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
+          </li>
+          <li>
+            <a href="pacotes-de-viagens.html" target="_blank" title="Acessar Pacotes de viagem">Pacotes de viagem</a>
+          </li>
+          <li>
+            <a href="contato.html" target="_blank" title="Acessar Contato">Contato</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section class="hero">
+    <div class="hero-img"></div>
+    <h2>
+      Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
+      à seleção das atividades, cuidamos de todos os detalhes para que você
+      aproveite ao máximo cada momento da sua jornada!
+    </h2>
+  </section>
+  <section class="offers">
+    <div class="section-title">
+      <h2>Ofertas da Semana</h2>
+      <hr />
+    </div>
+    <div class="offers-cards">
+      <article class="card japao">
+        <header>
+          <p>HOTEL+AÉREO</p>
+          <h3>Japão</h3>
+          <span>R$ 4000</span>
+        </header>
+        <section></section>
+        <footer>
+          <a href="#" class="button">Ver Detalhes</a>
+        </footer>
+      </article>
+      <article class="card san-andreas">
+        <header>
+          <p>HOTEL+AÉREO</p>
+          <h3>San Andreas</h3>
+          <span>R$ 3000</span>
+        </header>
+        <section></section>
+        <footer>
+          <a href="#" class="button">Ver Detalhes</a>
+        </footer>
+      </article>
+      <article class="card paraiba">
+        <header>
+          <p>HOTEL+AÉREO</p>
+          <h3>Paraíba</h3>
+          <span>R$ 1200</span>
+        </header>
+        <section></section>
+        <footer>
+          <a href="#" class="button">Ver Detalhes</a>
+        </footer>
+      </article>
+      <article class="card manaus">
+        <header>
+          <p>HOTEL+AÉREO</p>
+          <h3>Manaus</h3>
+          <span>R$ 1600</span>
+        </header>
+        <section></section>
+        <footer>
+          <a href="#" class="button">Ver Detalhes</a>
+        </footer>
+      </article>
+    </div>
+  </section>
+  <section class="categories">
+    <div class="section-title">
+      <h2>Busque por Categoria</h2>
+      <hr />
+    </div>
+    <div class="categories-cards">
+      <a class="card" href="#" target="_blank" title="Busque pela categoria Pacotes Nacionais">
+        <img src="img/icone-caminhada.png" alt="ícone cinza representando uma pessoa fazendo tracking" />
+        <h3 class="content-title">
+          Pacotes<br />
+          Nacionais
+        </h3>
       </a>
-      <div class="navigation-menu">
-        <label for="menu">
-          <img src="img/menu.png" alt="menu" />
-        </label>
-        <input type="checkbox" id="menu" hidden />
-        <nav>
-          <ul class="list-links">
-            <li>
-              <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
-            </li>
-            <li>
-              <a
-                href="pacotes-de-viagens.html"
-                target="_blank"
-                title="Acessar Pacotes de viagem"
-                >Pacotes de viagem</a
-              >
-            </li>
-            <li>
-              <a href="contato.html" target="_blank" title="Acessar Contato"
-                >Contato</a
-              >
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <section class="hero">
-      <div class="hero-img"></div>
-      <h2>
-        Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
-        à seleção das atividades, cuidamos de todos os detalhes para que você
-        aproveite ao máximo cada momento da sua jornada!
-      </h2>
-    </section>
-    <section class="offers">
-      <div class="section-title">
-        <h2>Ofertas da Semana</h2>
-        <hr />
-      </div>
-      <div class="offers-cards">
-        <article class="card japao">
-          <header>
-            <p>HOTEL+AÉREO</p>
-            <h3>Japão</h3>
-            <span>R$ 4000</span>
-          </header>
-          <section></section>
-          <footer>
-            <a href="#" class="button">Ver Detalhes</a>
-          </footer>
-        </article>
-        <article class="card san-andreas">
-          <header>
-            <p>HOTEL+AÉREO</p>
-            <h3>San Andreas</h3>
-            <span>R$ 3000</span>
-          </header>
-          <section></section>
-          <footer>
-            <a href="#" class="button">Ver Detalhes</a>
-          </footer>
-        </article>
-        <article class="card paraiba">
-          <header>
-            <p>HOTEL+AÉREO</p>
-            <h3>Paraíba</h3>
-            <span>R$ 1200</span>
-          </header>
-          <section></section>
-          <footer>
-            <a href="#" class="button">Ver Detalhes</a>
-          </footer>
-        </article>
-        <article class="card manaus">
-          <header>
-            <p>HOTEL+AÉREO</p>
-            <h3>Manaus</h3>
-            <span>R$ 1600</span>
-          </header>
-          <section></section>
-          <footer>
-            <a href="#" class="button">Ver Detalhes</a>
-          </footer>
-        </article>
-      </div>
-    </section>
-    <section class="categories">
-      <div class="section-title">
-        <h2>Busque por Categoria</h2>
-        <hr/>
-      </div>
-      <div class="categories-cards">
-        <a
-          class="card"
-          href="#"
-          target="_blank"
-          title="Busque pela categoria Pacotes Nacionais"
-        >
-          <img
-            src="img/icone-caminhada.png"
-            alt="ícone cinza representando uma pessoa fazendo tracking"
-          />
-          <h3 class="content-title">
-            Pacotes<br />
-            Nacionais
-          </h3>
-        </a>
 
-        <a
-          class="card"
-          href="#"
-          target="_blank"
-          title="Busque pela categoria Pacotes Internacionais"
-        >
-          <img
-            src="img/icone-aviao.png"
-            alt="ícone cinza representando um avião"
-          />
-          <h3 class="content-title">
-            Pacotes <br />
-            Internacionais
-          </h3>
-        </a>
-        <a
-          class="card single-line transfer"
-          href="#"
-          target="_blank"
-          title="Busque pela categoria Transfer"
-        >
-          <img
-            src="img/icone-onibus.png"
-            alt="ícone cinza representando um ônibus"
-          />
-          <h3 class="content-title">Transfer</h3>
-        </a>
-        <a
-          class="card single-line"
-          href="#"
-          target="_blank"
-          title="Busque pela categoria Seguro Viagem"
-        >
-          <img
-            src="img/icone-planeta.png"
-            alt="ícone cinza representando o planeta terra com um cadeado"
-          />
-          <h3 class="content-title">Seguro Viagem</h3>
-        </a>
-      </div>
+      <a class="card" href="#" target="_blank" title="Busque pela categoria Pacotes Internacionais">
+        <img src="img/icone-aviao.png" alt="ícone cinza representando um avião" />
+        <h3 class="content-title">
+          Pacotes <br />
+          Internacionais
+        </h3>
+      </a>
+      <a class="card single-line transfer" href="#" target="_blank" title="Busque pela categoria Transfer">
+        <img src="img/icone-onibus.png" alt="ícone cinza representando um ônibus" />
+        <h3 class="content-title">Transfer</h3>
+      </a>
+      <a class="card single-line" href="#" target="_blank" title="Busque pela categoria Seguro Viagem">
+        <img src="img/icone-planeta.png" alt="ícone cinza representando o planeta terra com um cadeado" />
+        <h3 class="content-title">Seguro Viagem</h3>
+      </a>
+    </div>
+  </section>
+  </section>
+  <sections class="destinations">
+    <div class="section-title">
+      <h2>Destinos Populares</h2>
+      <hr />
+    </div>
+    <div class="destinations-items">
+      <article class="item">
+        <header>
+          <div class="img-item"></div>
+          <h4>Tokyo</h4>
+          <p>Tóquio é uma cidade vibrante e cosmopolita, com seus templos históricos,
+            museus de arte moderna e arranha-céus icônicos.
+            Não perca a chance de mergulhar em sua atmosfera fascinante.</p>
+        </header>
+        <footer>
+          <a href="#" class="button">Ver Detalhes</a>
+        </footer>
+      </article>
+      <article class="item">
+        <header>
+          <div class="img-item"></div>
+          <h4>Osaka</h4>
+          <p>Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa por sua gastronomia deliciosa e por ser um excelente ponto de partida para explorar outras cidades japonesas próximas.</p>
+        </header>
+        <footer>
+          <a href="#" class="button">Ver Detalhes</a>
+        </footer>
+      </article>
+    </div>
     </section>
-    </section>
-  </body>
+</body>
 </html>
-  
