--- a/index.html
+++ b/index.html
@@ -243,6 +243,12 @@
           </footer>
         </article>
       </div>
+      <section class="payments">
+        <div class="section-title">
+          <h2>Condições de Pagamento</h2>
+          <hr />
+        </div>
+
     </section>
   </body>
 </html>
