--- a/index.html
+++ b/index.html
@@ -248,7 +248,16 @@
           <h2>Condições de Pagamento</h2>
           <hr />
         </div>
-
-    </section>
+        <div class="text-content">
+          <h3>Parcelamento em até 12x!</h3>
+          <hr />
+          <p>Viaje pagando em até 12 parcelas no cartão, à vista no crédito com 5% de desconto ou no Pix com 10% de desconto! </p>
+        </div>
+        <div class="image-content">
+          <div class="image-bag"></div>
+          <div class="image-passaport"></div>
+          <div class="image-people"></div>
+        </div>
+      </section>
   </body>
 </html>
