--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
           <hr />
         </div>
         <div class="text-content">
-          <h3>Parcelamento em até 12x!</h3>
+          <h3 class="content-title">Parcelamento em até 12x!</h3>
           <hr />
-          <p>Viaje pagando em até 12 parcelas no cartão, à vista no crédito com 5% de desconto ou no Pix com 10% de desconto! </p>
+          <p class="content-text">Viaje pagando em até 12 parcelas no cartão, à vista no crédito com 5% de desconto ou no Pix com 10% de desconto! </p>
         </div>
         <div class="image-content">
           <div class="image-bag"></div>
